# RAG-CHATBOT

./: .env  .gitignore  README.md  chatbot.py  main.py  pyproject.toml  requirements.txt
components/: embedder.py  retriever .py
data/: b_tech_in_civil_engineering_with_applications_in_ai_ml.json  ba_economics_sociology_honours_honours_with_research_with_minor_in_political_science.json  bachelor_of_architecture_barch.json  bachelor_of_arts_ba_psychology_economics_honours_honours_with_research.json  bachelor_of_arts_communication_and_media_english_honours_honours_with_research.json  bachelor_of_arts_communication_and_media_psychology_honours_honours_with_research.json  bachelor_of_arts_economics_honours_honours_with_research.json  bachelor_of_arts_economics_political_science_honours_honours_with_research.json  bachelor_of_arts_english_honours_honours_with_research.json  bachelor_of_arts_history_political_science_honours_honours_with_research_with_minor_in_economics.json  bachelor_of_arts_journalism_and_digital_media_english_honours_honours_with_research.json  bachelor_of_arts_liberal_arts_honours_honours_with_research.json  bachelor_of_arts_media_psychology_honours_honours_with_research.json  bachelor_of_arts_media_public_affairs.json  bachelor_of_arts_music_western_classical_creative_media_honours.json  bachelor_of_arts_music_western_classical_psychology_honours.json  bachelor_of_arts_performing_arts_creative_media_honours.json  bachelor_of_arts_performing_arts_psychology_honours.json  bachelor_of_arts_philosophy.json  bachelor_of_commerce_accountancy_and_auditing.json  (+194 more)
(+6 files in other folders)
