[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "langchain-community>=0.3.23",
    "langchain-text-splitters>=0.3.8",
    "numpy>=2.2.5",
    "ollama>=0.4.8",
    "openai>=1.77.0",
    "pypdf>=5.4.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]
